# bootcamp-8

./: README.md  exemplo.csv  pyproject.toml
