[tool.poetry]
name = "bootcamp-8"
version = "0.1.0"
description = ""
authors = ["Jefferson Lima <seuemail@exemplo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.3"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"